a fix for an older version